--- a/package.json
+++ b/package.json
@@ -22,5 +22,16 @@
   "bugs": {
     "url": "https://github.com/breachofmind/expressway-dev/issues"
   },
-  "homepage": "https://github.com/breachofmind/expressway-dev#readme"
+  "homepage": "https://github.com/breachofmind/expressway-dev#readme",
+  "dependencies": {
+    "autoprefixer": "^6.7.1",
+    "babel-core": "^6.22.1",
+    "babel-preset-es2015": "^6.22.0",
+    "extract-text-webpack-plugin": "v2.0.0-rc.1",
+    "livereload": "^0.6.0",
+    "lodash": "^4.17.4",
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.9.0",
+    "webpack-hot-middleware": "^2.16.1"
+  }
 }
