Remove webpack middleware and add server to service

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "extract-text-webpack-plugin": "v2.0.0-rc.1",
     "livereload": "^0.6.0",
     "lodash": "^4.17.4",
+    "node-ssh": "^4.0.1",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.9.0",
     "webpack-dev-server": "^1.16.2",
